crates/codira_syntax/src/tests/snapshots/codira_syntax__tests__parser__logic_operands.snap
---
source: crates/codira_syntax/src/tests/parser.rs
expression: "SourceFile::parse(r#\"\n    func main() {\n        let _ = a || b;\n        let _ = a && b;\n    }\n    \"#,).debug_dump()"
snapshot_kind: text
---
SOURCE_FILE@0..77
  FUNCTION_DEF@0..72
    WHITESPACE@0..5 "\n    "
    FUNC_KW@5..9 "func"
    WHITESPACE@9..10 " "
    NAME@10..14
      IDENT@10..14 "main"
    PARAM_LIST@14..16
      L_PAREN@14..15 "("
      R_PAREN@15..16 ")"
    WHITESPACE@16..17 " "
    BLOCK_EXPR@17..72
      L_CURLY@17..18 "{"
      WHITESPACE@18..27 "\n        "
      LET_STMT@27..42
        LET_KW@27..30 "let"
        WHITESPACE@30..31 " "
        PLACEHOLDER_PAT@31..32
          UNDERSCORE@31..32 "_"
        WHITESPACE@32..33 " "
        EQ@33..34 "="
        WHITESPACE@34..35 " "
        BIN_EXPR@35..41
          PATH_EXPR@35..36
            PATH@35..36
              PATH_SEGMENT@35..36
                NAME_REF@35..36
                  IDENT@35..36 "a"
          WHITESPACE@36..37 " "
          PIPEPIPE@37..39 "||"
          WHITESPACE@39..40 " "
          PATH_EXPR@40..41
            PATH@40..41
              PATH_SEGMENT@40..41
                NAME_REF@40..41
                  IDENT@40..41 "b"
        SEMI@41..42 ";"
      WHITESPACE@42..51 "\n        "
      LET_STMT@51..66
        LET_KW@51..54 "let"
        WHITESPACE@54..55 " "
        PLACEHOLDER_PAT@55..56
          UNDERSCORE@55..56 "_"
        WHITESPACE@56..57 " "
        EQ@57..58 "="
        WHITESPACE@58..59 " "
        BIN_EXPR@59..65
          PATH_EXPR@59..60
            PATH@59..60
              PATH_SEGMENT@59..60
                NAME_REF@59..60
                  IDENT@59..60 "a"
          WHITESPACE@60..61 " "
          AMPAMP@61..63 "&&"
          WHITESPACE@63..64 " "
          PATH_EXPR@64..65
            PATH@64..65
              PATH_SEGMENT@64..65
                NAME_REF@64..65
                  IDENT@64..65 "b"
        SEMI@65..66 ";"
      WHITESPACE@66..71 "\n    "
      R_CURLY@71..72 "}"
  WHITESPACE@72..77 "\n    "
